# RetoLiverpool

./: ML  README.md  gradient_boosted_liverpool.joblib  index.html  main.py  model_gb.json  render.yaml  requirements.txt  sql_store.py  vector_store.py
BACKEND/: legal_references.json  main.py  model_gb.json  render.yaml  sql_store.py
DWH/: README.md
FRONTEND/DASH/backend/: api.py
FRONTEND/DASH/backend/assets/: legal_references.json
FRONTEND/DASH/frontend/assets/: style.css
FRONTEND/DASH/frontend/pages/: prediccion.py  riesgo.py
FRONTEND/Web en DASH/: README.md  main.py  pyproject.toml  requirements.txt
FRONTEND/Web en DASH/pages/: index.py  portafolio.py  tableros.py
ML/: gradient_boosted_liverpool.joblib  modelofinalliverpool.ipynb
