[project]
name = "liverpool-dash"
version = "0.1.0"
description = "Dashboard multipágina para inteligencia de marcas Liverpool"
requires-python = ">=3.11"
dependencies = [
    "dash[async]>=2.17.0",
    "pandas>=2.0.0",
    "plotly>=5.20.0",
    "openpyxl>=3.1.0",
    "requests>=2.31.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pillow>=12.2.0",
    "dash-svg>=0.0.12",
]
